--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,15 +7,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Trang chủ</title>
 	<!-- css  -->
-	<link rel="stylesheet" href="../dist/css/main.min.css">
+	<link rel="stylesheet" href="./dist/css/main.min.css">
 	<!-- font awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
 		integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
 	<!-- slick -->
-	<link rel="stylesheet" href="../vendor/owlcarousel/assets/owl.carousel.min.css">
-	<link rel="stylesheet" href="../vendor/owlcarousel/assets/owl.theme.default.min.css">
+	<link rel="stylesheet" href="./vendor/owlcarousel/assets/owl.carousel.min.css">
+	<link rel="stylesheet" href="./vendor/owlcarousel/assets/owl.theme.default.min.css">
 	<!-- bootstrap -->
-	<link rel="stylesheet" href="../vendor/bootstrap-4.6.0/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./vendor/bootstrap-4.6.0/dist/css/bootstrap.min.css">
 
 <body>
 	<div class="wrapper">
@@ -46,19 +46,19 @@
 		<header>
 			<div class="owl-carousel header-banner">
 				<div class="banner__item">
-					<img src="../dist/img/banner/01.jpg" alt="banner01">
+					<img src="./dist/img/banner/01.jpg" alt="banner01">
 				</div>
 				<div class="banner__item">
-					<img src="../dist/img/banner/silde-gia-re.jpg" alt="banner02">
+					<img src="./dist/img/banner/silde-gia-re.jpg" alt="banner02">
 				</div>
 				<div class="banner__item">
-					<img src="../dist/img/banner/banner-nhanh-chong.jpg" alt="banner03">
+					<img src="./dist/img/banner/banner-nhanh-chong.jpg" alt="banner03">
 				</div>
 			  </div>
 			<div class="header-menu">
 				<div class="header-menu__logo col-sm-2 col-md-3 pl-0">
 					<a href="#">
-						<img src="../dist/img/logo-1.png" alt="logo">
+						<img src="./dist/img/logo-1.png" alt="logo">
 					</a>
 				</div>
 				<div class="header-menu__list">
@@ -233,7 +233,7 @@
 												<div class="img-box img-box--cover cover--seenow">
 													<span class="sale-label">sale 50%</span>
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-02-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-02-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -244,7 +244,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-04-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-04-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -255,7 +255,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow ">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-05-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-05-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -266,7 +266,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-kline-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-kline-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -310,7 +310,7 @@
 												<div class="img-box img-box--cover cover--seenow">
 													<span class="sale-label">sale 50%</span>
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-02-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-02-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -321,7 +321,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-04-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-04-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -332,7 +332,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow ">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-05-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-05-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -343,7 +343,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-kline-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-kline-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -387,7 +387,7 @@
 												<div class="img-box img-box--cover cover--seenow">
 													<span class="sale-label">sale 50%</span>
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-02-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-02-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -398,7 +398,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-04-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-04-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -409,7 +409,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow ">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-05-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-05-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -420,7 +420,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-kline-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-kline-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -464,7 +464,7 @@
 												<div class="img-box img-box--cover cover--seenow">
 													<span class="sale-label">sale 50%</span>
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-02-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-02-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -475,7 +475,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-04-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-04-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -486,7 +486,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow ">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-05-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-05-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -497,7 +497,7 @@
 											<div class="silde-1__item silde__item">
 												<div class="img-box img-box--cover cover--seenow">
 													<a href="#">
-														<img src="../dist/img/product/2-business-card-kline-print-design-shake-design-705x512-262x262.png" alt="">
+														<img src="./dist/img/product/2-business-card-kline-print-design-shake-design-705x512-262x262.png" alt="">
 													</a>
 												</div>
 												<div class="info">
@@ -579,12 +579,12 @@
 
 	</div>
 	<!-- script  -->
-	<script src="../vendor/jquery-3.6.0.min.js"></script>
-	<script src="../vendor/owlcarousel/owl.carousel.min.js"></script>
+	<script src="./vendor/jquery-3.6.0.min.js"></script>
+	<script src="./vendor/owlcarousel/owl.carousel.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
 		crossorigin="anonymous"></script>
-	<script src="../vendor/bootstrap-4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="./vendor/bootstrap-4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 	
 	<script>
 		$(document).ready(function () {
